--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "vlucas/phpdotenv": "v5.0.0"
+        "vlucas/phpdotenv": "v5.0.0",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3.3"
